--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,3 @@
-*/node_modules
-*/*/node_modules
-.idea
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-!.vscode/*.code-snippets
-
-# Local History for Visual Studio Code
-.history/
-
-# Built Visual Studio Code Extensions
-*.vsix
+node_modules
+dist
+package-lock.json
