--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^4.1.4"
+    "vite": "^4.1.4",
+    "vite-plugin-copy": "^0.1.6"
   },
   "dependencies": {
     "d3": "^7.8.2",
